# arm-bench

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp
counting/: counting.h  mem.h
knuth/: knuth.h  mem.h
mcc/: mcc.h  mem.h
mea/: _mea.h  mcc.h  mea.h  mem.h  pb.h  pu.h
nussinov/: dapt.h  library.h  nuss.h  oryg.h  pluto.h  tilecorr.h
nw/: nw.h  nw_codes.h
result/: Counting.txt  Mcc.txt  NW.txt  Nussinov.txt  Triang.txt  Zuker.txt
sw/: mem.h  sw.h  sw_codes.h
sw3d/: mem3d.h  sw3d.h  sw3d_codes.h
triang/: triang.h
zuker/: mem.h  zuker.h  zuker_codes.h
